--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "jquery": "^3.3.1",
+    "lottie-web": "^5.4.4",
     "vue": "^2.5.22",
+    "vue-slick": "^1.1.15",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
