--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "lottie-web": "^5.4.4",
+    "udn-newmedia-utils": "^1.1.0",
     "vue": "^2.5.22",
     "vue-slick": "^1.1.15",
     "vuex": "^3.0.1"
